# state-of-the-art--rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_server.sh
docker/: .env.example  Dockerfile  docker-compose.yml
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  generate.py  (+3 more)
src/clients/: __init__.py  claude.py  colpali.py  gemini.py  mongodb.py  voyage.py
src/config/: settings.py
src/generation/: __init__.py  base.py  citations.py  crag.py  generator.py  hallucination.py  pipeline.py
src/ingestion/: __init__.py  pipeline.py
src/models/: __init__.py  chunks.py  communities.py  documents.py  entities.py
src/retrieval/: __init__.py  base.py  colpali.py  graphrag.py  hybrid.py  leanrag.py  mcts.py  pipeline.py  raptor.py  reranker.py  text.py  vector.py
src/routing/: __init__.py  intent.py  metrics.py  router.py
src/utils/: __init__.py  cache.py  health.py  logging.py  middleware.py  mongodb_indexes.py
tests/: __init__.py  conftest.py  test_config.py
tests/test_api/: test_health.py
tests/test_clients/: test_colpali.py  test_mongodb.py
tests/test_generation/: test_api.py  test_citations.py  test_generator.py  test_prompts.py
tests/test_ingestion/: __init__.py  test_colpali.py  test_contextual.py  test_graphrag.py  test_raptor.py  test_voyage_embedder.py
tests/test_retrieval/: __init__.py  test_base.py  test_colpali.py  test_pipeline.py  test_reranker.py  test_vector.py
tests/test_routing/: test_intent.py  test_metrics.py  test_router.py
tests/test_utils/: test_cache.py  test_health.py
(+21 files in other folders)
